<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_actividad_principal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.javier.a02_android_ejerciciosclase.ActividadPrincipal">

    <EditText
        android:id="@+id/texto"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/escribeaqui" />
    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/texto">
        <CheckBox
            android:id="@+id/negrita"
            android:text="@string/negrita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"/>

        <CheckBox
            android:id="@+id/gigante"
            android:text="@string/enorme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"/>

        <CheckBox
            android:id="@+id/minusculo"
            android:text="@string/minusculo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"/>

        <CheckBox
            android:id="@+id/rojo"
            android:text="@string/rojo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="25"/>
    </LinearLayout>

    <Button
        android:id="@+id/cambiarPantalla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/siguiente"
        android:layout_below="@id/ll"
        android:onClick="next"/>
</RelativeLayout>
